Get profile & create profile & check if user exists
