# functions/src/modules/user/model/user-profile.ts
@@ -1,0 +1,11 @@
+export type UserProfile = {
+    id: string,
+    name: string,
+    birthDate: number
+    mail: string,
+    profileImageUrl: string,
+    // settings
+    radiusVisibility: number,
+    badge: number,
+    pocks: number
+}
